--- a/app.yaml
+++ b/app.yaml
@@ -4,7 +4,7 @@ env: standard
 
 env_variables:
   REACT_APP_API_KEY: 'AIzaSyAStU53JobDVKlxMjoVtOHBjBKZvAEhXEg'
-  PUBLIC_URL: '../../public'  # Set your custom PUBLIC_URL if needed
+  MY_PUBLIC_URL: '../../public'  # Set your custom PUBLIC_URL if needed
 
 handlers:
   # Serve static files from the custom public path
