--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 REACT_APP_API_KEY = AIzaSyAStU53JobDVKlxMjoVtOHBjBKZvAEhXEg
 MY_PUBLIC_URL = '../../public'
-API = "http://localhost:5000"
+REACT_APP_API_ADDRESS = "http://localhost:5000"
 
 
