--- a/app.yaml
+++ b/app.yaml
@@ -5,7 +5,7 @@ env: standard
 env_variables:
   REACT_APP_API_KEY: 'AIzaSyAStU53JobDVKlxMjoVtOHBjBKZvAEhXEg'
   MY_PUBLIC_URL: '../../public'  
-  API: 'https://transport-api-444706.nn.r.appspot.com'
+  REACT_APP_API_ADDRESS: 'https://transport-api-444706.nn.r.appspot.com'
 
 handlers:
   # Serve static files from the custom public path
