--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-
+REACT_APP_API_KEY = AIzaSyAStU53JobDVKlxMjoVtOHBjBKZvAEhXEg
+MY_PUBLIC_URL = '../../public'
+BE_API= 'https://transport-api-444706.nn.r.appspot.com'
