--- a/.env
+++ b/.env
@@ -1,9 +1,3 @@
 REACT_APP_API_KEY = AIzaSyAStU53JobDVKlxMjoVtOHBjBKZvAEhXEg
 MY_PUBLIC_URL = '../../public'
-<<<<<<< HEAD
-BE_API= 'https://transport-api-444706.nn.r.appspot.com'
-=======
-REACT_APP_API_ADDRESS = "http://localhost:5000"
-
-
->>>>>>> development
+BE_API= 'http://localhost:5000'
