--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_API_KEY = AIzaSyAStU53JobDVKlxMjoVtOHBjBKZvAEhXEg
 MY_PUBLIC_URL = '../../public'
-BE_API= 'http://localhost:5000'
+REACT_APP_API_ADDRESS = "http://localhost:5000"
